# docs/swagger/collections.yaml
@@ -817,7 +817,7 @@ paths:
                       page:
                         type: integer
     delete:
-      description: handles retrieval of bounce records.
+      description: handles deletion of bounce records.
       operationId: deleteBounces
       tags:
         - Bounces
@@ -890,6 +890,58 @@ paths:
                   data:
                     type: boolean
 
+  /bounces/blocklist:
+    put:
+      description: handles blocklisting of bounces
+      operationId: manageBlocklistBounces
+      tags:
+        - Bounces
+     parameters:
+        - in: query
+          name: all
+          description: flag for multiple bounce records to blocklist
+          schema:
+            type: boolean
+        - in: query
+          name: id
+          description: list of bounce ids to blocklist
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: boolean
+
+  "/bounces/{id}/blocklist":
+    put:
+      description: handles the blocklisting of one or more bounces.
+      operationId: manageBlocklistBouncesById
+      tags:
+        - Bounces
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: The id value of the bounce you want to blocklist.
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: boolean
+                    
   /lists:
     get:
       description: retrieves lists with additional metadata like subscriber counts. This may be slow.
@@ -2159,6 +2211,10 @@ components:
             analytics.title:
               type: string
             analytics.toDate:
+              type: string
+            bounces.numSelected:
+              type: string
+            bounces.selectAll:
               type: string
             bounces.source:
               type: string
